--- a/trunk/CEP/CPA/AppAgent/MeqServer/TODO
+++ b/trunk/CEP/CPA/AppAgent/MeqServer/TODO
@@ -15,6 +15,10 @@ MEQ in general:
     repeated requests, this step is skipped, regardless. 
   
   * Implement request ID hierarchy
+  
+  * check performance: why does privatizing message arguments in MeqServer
+    sometimes lead to cloning? I don't see why anybody else would be holding
+    onto the message.
       
         + Document the two types of node_state lookups
         + Document pollChildren()
@@ -39,11 +43,12 @@ MEQ in general:
         + think through writability & privatization issues. Perhaps finally
           implement simple copy-on-write as the default policy in DMI?
           27/11/03: good to go for now. Still thinking about COW.
-
+          
 Spigot:
 
-  * In deliver, just stick the result in the cache and let the caching code
-    take care of everything else. 
+    - In deliver, just stick the result in the cache and let the caching code
+      take care of everything else. 
+      10/01/04: done, needs testing
     
         + Allow string specification for correlations
           09/01/04: no need, now that Spigots output all correlations at once.
@@ -54,12 +59,17 @@ Parm:
 
 Request: 
 
-  * BUG: Figure out why state_test() (meqtest.g) causes Requests to be fail to
-    unpack upon the first invocation. Possibly related to problem below.
-    See details in report 1 below.
-    
   * Buglet: when Jan supplied an illegal request (wrong fields, unmatched IDs), the 
     error message was not exactly descriptive
+    
+        + BUG: Figure out why state_test() (meqtest.g) causes Requests to be
+          fail to unpack upon the first invocation. Possibly related to problem
+          below. See details in report 1 below. 14/01/04: found; Cells was
+          missing a clone() and thus wouldn't clone itself properly. Request
+          would only occasionally be cloned (depending on whether the other
+          thread already released the message or not), thus the error only
+          showed up when true cloning occurred. Removing bug report from this
+          file.
 
 Vells:
 
@@ -101,40 +111,3 @@ General:
           8/12/03: done
           
           
-------------------------------------------
-report 1:
-
-Running state_test() the first time round sometimes results in error. 
-Node.Execute returns .e.g:
-
-  error=[DataRecord/40a15538 RW 4 fields / refs R:0 WR:0] validate of Request
-  record failed: [DataRecord/40a155c0 RW 4 fields / refs R:1 WR:1] can't access
-  datarecord in scalar mode (id: (null), type meqcells)
-
-The request looks like:
-
-  Failed request: DataRecord/40a15538 RW 4 fields / refs R:0 WR:0
-   cells: DataRecord/40a155c0 RW 4 fields / refs R:1 WR:1
-             refs: <-R/409152b0>40a155c0 AW--L p/- n/-
-             times: DataArray/40a185d8 RW Array(double,1)  3
-             domain: DataField/40a182c8 RO double:4 / refs R:1 WR:1
-                       refs: <-R/409153b8>40a182c8 AW--L p/- n/-
-             num.freq: DataArray/40a18410 RW Array(int,1)  1
-             time.steps: DataArray/40a19370 RW Array(double,1)  3
-   node.state: DataRecord/40a19718 RW 1 fields / refs R:1 WR:1
-             refs: <-R/409154c0>40a19718 AW--L p/- n/-
-             b: DataRecord/40a19770 RW 1 fields / refs R:1 WR:1
-                       refs: <-R/409159d0>40a19770 AW--L p/- n/-
-                       by.list: DataField/40a197c8 RW datarecord:2 / refs R:1 WR:1
-                                 refs: <-R/40915a80>40a197c8 AW--L p/- n/-
-                                   0: uninitialized
-                                   1: uninitialized
-   calc.deriv: DataArray/40a19d30 RW Array(bool,1)  1
-   request.id: DataField/40a19e70 RW hiid:1 / refs R:1 WR:1
-
-Note that 40a155c0 (the exception originator) is the Cells object, and it is
-being accessed as TpMeqCells in scalar mode. This can only occur if the
-(*this)[FCells].as_p<Cells>() call in Request::validateContent() for
-some reason fails to recognize the Cells as such, treats it as a DataRecord,
-and tries to index _into_ it.
-
