--- a/trunk/CEP/CPA/AppAgent/MeqServer/CHANGES
+++ b/trunk/CEP/CPA/AppAgent/MeqServer/CHANGES
@@ -1,3 +1,7 @@
+
+  * Renamed parmtable.g to meptable.g; the object is now called 'meptable()'
+
+
 Check in of 12/12/03:
 
   * Changed MeqServer command names:
