%[ER: 16]% Fixes to test environment. Added symlinks to ../pkginc/*.g; this still doesn't solve the full problem of how to run test without a prior "make install"

--- a/CEP/CPA/AppAgent/MeqServer/CHANGES
+++ b/CEP/CPA/AppAgent/MeqServer/CHANGES
@@ -1,3 +1,7 @@
+
+  * Renamed parmtable.g to meptable.g; the object is now called 'meptable()'
+
+
 Check in of 12/12/03:
 
   * Changed MeqServer command names:
